# 2023_summer_school

./: .gitignore  README.md  setup.cfg  start_day.sh  template_notebook.ipynb
01_Intro/: Introduction to astrostatistics and machine learning with Python.ipynb
01_Intro/data/: DA_kleinman.npz  DB_kleinman.npz  schneider_quasars.npz
02_Fitting/: Fitting_Methods.ipynb
02_Fitting/data/: ReadMe
03_Classical/: Classical_1.ipynb  Classical_1_AnswerKey.ipynb  Classical_2.ipynb
03_Classical/data/: GC_MWG_absolute.csv  GC_MWG_masses.csv  lithium_line_example.npy  lithium_line_test_1.npy  lithium_line_test_2.npy  lithium_line_test_3.npy
04_Bayesian/: Bayesian_Intro.ipynb  Bayesian_Intro_AnswerKey.ipynb  Bayesian_Models.ipynb
05_MCMC/: MCMC_Basics.ipynb  MCMC_Basics_Answerkey.ipynb  MCMC_advanced Answer Key.ipynb  MCMC_advanced.ipynb
05_MCMC/data/: Antoniou2019_Table2.txt  Hogg_2010_example.npy
06_Time_Series/: 01_Time_Series_Intro.ipynb  Advanced Time Series Analysis.ipynb  Intro to Time Series Analysis.ipynb
06_Time_Series/data/: pleiades.npy  sunspots.txt
07_ML_Intro_and_Clustering/: ML_Intro_and_Clustering.ipynb  ML_Intro_and_Clustering_answerkey.ipynb
08_ML_Classification/: ML_Classification.ipynb  ML_Classification_answerkey.ipynb
09_ML_Practices/: .gitignore  01_ML_Practices.ipynb  01_ML_Practices_answerkey.ipynb  02_ML_Practices.ipynb  02_ML_Practices_answerkey.ipynb
09_ML_Practices/data/: spectra_classes.npy
10_DL_Intro/: .gitignore  DL_Intro.ipynb
11_DL_Regression/: DL_Regression.ipynb  DL_Regression_answerkey.ipynb
12_DL_CNNs/: DL_CNNs.ipynb  DL_CNNs_answerkey.ipynb
13_DL_Diffusion/src/: KLdivergence.py  diffusion_utils.py
Bayesian/: Bayesian_Intro.ipynb  Bayesian_Models.ipynb  Bayesian_S.ipynb
Classical/: Classical_1.ipynb  Classical_2.ipynb
DL_CNN/: DL_CNN_answerkey.ipynb
DL_CNN/data/: galaxy_cubes.npz
DL_Diffusion/data/: BPT_emlines.csv
DL_Intro/: DL_Intro.ipynb
DL_Intro/images/: Dinosaurs.xcf  images.pptx
Deep_Learning/: Deep_Learning_W_CNN.ipynb  Deep_Learning_W_CNN_answerkey.ipynb  Deep_Learning_W_Diffusion_answerkey.ipynb  diffusion.py  test_images.ipynb  utils.py
Deep_Learning/data/: BPT.csv
Deep_Learning/src/: diffusion_utils.py  utils.py
MCMC/: MCMC_Basics_Answerkey.ipynb  MCMC_S.ipynb
ML_Classification/: ML_Classification_Regression_SW_answerkey.ipynb  ML_Classification_answerkey.ipynb
ML_Classification/data/: LMC_phot_data.csv
ML_Intro+Clustering/: Intro_ML_Clustering_SW_answerkey.ipynb
ML_Intro_and_Clustering/: ML_Intro_and_Clustering_answerkey.ipynb
ML_Practices/: ML_Practices_1_answerkey.ipynb  ML_Practices_S_answerkey.ipynb  ML_Practices_W_answerkey.ipynb
ML_Practices/data/: stars_curated.csv
ML_Practices/images/: Flattened_Image.xcf  Grid_vs_Random.xcf  ML Practices.pptx
Time_Series/: Advanced Time Series Analysis.ipynb  Intro to Time Series Analysis.ipynb
