[metadata]
name = astrostat23
version = 1.0.0
author = Jeff Andrews, Paolo Bonfini, Konstantinos Kovlakas, Grigoris Maravelias
author_email = astrostat@physics.uoc.gr
description = Material of 2023 Summer School for AstroStatistics in Crete
repository = https://github.com/astrostatistics-in-crete/2023_summer_school
readme = README.md
keywords = summer school, astrostatistics, machine learning, deep learning
license = GPL v3.0
classifiers =
    Topic :: Scientific/Engineering :: Astronomy
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Natural Language :: English
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Private :: Do Not Upload
