[metadata]
name = astrostat
version = 2.0.23
author = Jeff Andrews, Paolo Bonfini, Konstantinos Kovlakas, Grigoris Maravelias
author_email = astrostat@physics.uoc.gr
description = Material of 2023 Summer School for AstroStatistics in Crete
repository = https://github.com/astrostatistics-in-crete/2023_summer_school
readme = README.md
keywords = summer school, astrostatistics, machine learning, deep learning
license = GPL v3.0
classifiers =
    Topic :: Scientific/Engineering :: Astronomy
    Programming Language :: Python :: 3
    Intended Audience :: Science/Research
    Natural Language :: English
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Private :: Do Not Upload

[options]
package_dir =
    = src
python_requires = ==3.9.16
setup_requires =
    setuptools
install_requires =
    pandas==1.5.3
    notebook==6.5.4
    scipy==1.10.1
    numpy==1.24.2
    astropy==5.2.1
    matplotlib==3.7.0
    emcee==3.1.4
    corner==2.2.1
    tqdm==4.65.0
    ipywidgets==8.0.4
    torch==2.0.1
    seaborn==0.12.2
    scikit-learn==1.2.2
    prettytable==3.7.0
    wget==3.2
    astroML==1.0.2
    pipelinehelper==0.7.8
    xgboost==1.7.5
